Sandbox/07-02-2025/force-app/main/default/objects/Sales_Database_Archive_v2__b/Sales_Database_Archive_v2__b.object-meta.xml
<CustomObject>
    <description>Updated Sales Database Archives - Lookup fields removed</description>
    <label>Sales Database Archive</label>
    <pluralLabel>Sales Database Archives</pluralLabel>
</CustomObject>