Sandbox/07-02-2025/force-app/main/default/objects/Sales_Database_Archive_v2__b/fields/Platform_Manager__c.field-meta.xml
<CustomField>
    <fullName>Platform_Manager__c</fullName>
    <label>Platform Manager</label>
    <length>250</length>
    <type>Text</type>
</CustomField>