Sandbox/07-02-2025/force-app/main/default/objects/Sales_Database_Archive_v2__b/fields/Platform_Name__c.field-meta.xml
<CustomField>
    <fullName>Platform_Name__c</fullName>
    <label>Platform Name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>