Sandbox/07-02-2025/force-app/main/default/objects/Sales_Database_Archive_v2__b/fields/Platform_Segment_ID__c.field-meta.xml
<CustomField>
    <fullName>Platform_Segment_ID__c</fullName>
    <label>Platform Segment ID</label>
    <length>250</length>
    <type>Text</type>
</CustomField>