Sandbox/07-02-2025/force-app/main/default/objects/Sales_Database_Archive_v2__b/fields/Sales_Database_ID__c.field-meta.xml
<CustomField>
    <fullName>Sales_Database_ID__c</fullName>
    <description>Main Index</description>
    <label>Sales Database ID</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>