Sandbox/07-02-2025/force-app/main/default/objects/Sales_Database_Archive_v2__b/fields/Salesperson__c.field-meta.xml
<CustomField>
    <fullName>Salesperson__c</fullName>
    <label>Salesperson</label>
    <length>250</length>
    <type>Text</type>
</CustomField>