Sandbox/07-02-2025/force-app/main/default/objects/Sales_Database_Archive_v2__b/fields/Segments_Database_Number__c.field-meta.xml
<CustomField>
    <fullName>Segments_Database_Number__c</fullName>
    <label>Segments Database Number</label>
    <length>250</length>
    <type>Text</type>
</CustomField>